--- a/css/send.css
+++ b/css/send.css
@@ -1,24 +1,3 @@
-.notification-editor {
-	padding: 0.6em;
-}
-
-div.tabs {
-	min-height: 13em;
-	height: 13em;
-	position: relative;
-	line-height: 1;
-	z-index: 0;
-}
-div.tabs > div {
-	display: inline
-}
-div.tabs > div > a {
-	padding: 0.2em;
-	border: 0.1em;
-}
-div.tabs > div:not(:target) > a {
-	border-bottom: 0.2em solid #BBB;
-}
 #deflang:target > a {
 	border-bottom: 0.2em solid #F00;
 }
@@ -27,23 +6,6 @@ div.tabs > div:not(:target) > a {
 }
 div.tabs > div:target > a {
 	border-bottom: 0.2em solid #000;
-}
-div.tabs > div > div {
-	z-index: -2;
-	left: 0;
-	top: 1.3em;
-	bottom: 0; right: 0;
-	overflow: auto;
-	padding: 0.3em;
-	border: 0.1em;
-	background: #f1f1f1;
-}
-div.tabs > div:not(:target) > div {
-	position: absolute
-}
-div.tabs > div:target > div {
-	position: absolute;
-	z-index: -1
 }
 
 .pn-title {
@@ -54,4 +16,43 @@ div.tabs > div:target > div {
 	width: 300px;
 	resize: none;
 	height: 7em;
+}
+
+.pn-tabs {
+position: relative;   
+min-height: 100px;
+clear: both;
+margin: 25px 0;
+}
+.pn-tab {
+float: left;
+}
+.pn-tab label {
+background: #eee; 
+padding: 10px; 
+border: 1px solid #ccc; 
+margin-left: -1px; 
+position: relative;
+left: 1px; 
+}
+.pn-tab [type=radio] {
+display: none;   
+}
+.pn-content {
+position: absolute;
+top: 28px;
+left: 0;
+background: white;
+padding: 20px;
+border: 1px solid #ccc; 
+display:none;
+min-width:700px;
+}
+[type=radio]:checked ~ label {
+background: white;
+border-bottom: 1px solid white;
+z-index: 2;
+}
+[type=radio]:checked ~ label ~ .pn-content {
+display:block;
 }
