--- a/css/wp-ms-fcm.css
+++ b/css/wp-ms-fcm.css
@@ -50,7 +50,8 @@
 }
 
 .pn-main-language {
-	font: underline;
+	text-decoration: underline;
+	color: #c00;
 }
 
 [type=radio]:checked ~ label ~ .pn-content {
